--- a/ovenspace.cfg
+++ b/ovenspace.cfg
@@ -4,7 +4,7 @@ OME_HOST = 'localhost'
 
 OME_API_ENABLE_TLS = 'false'
 OME_API_PORT = '8081'
-OME_API_ACCESS_TOKEN = 'your_api_access_token'
+OME_API_ACCESS_TOKEN = 'admin:admin'
 
 OME_VHOST_NAME = 'default'
 OME_APP_NAME = 'app'
