finished show stat button

--- a/ovenspace.cfg
+++ b/ovenspace.cfg
@@ -1,5 +1,5 @@
-OME_HOST = 'localhost'
-# OME_HOST = '192.168.0.10'
+# OME_HOST = 'localhost'
+OME_HOST = '192.168.4.240'
 # OME_HOST = '0.0.0.0'
 
 OME_API_ENABLE_TLS = 'false'
