--- a/ovenspace.cfg
+++ b/ovenspace.cfg
@@ -1,9 +1,10 @@
 # OME_HOST = 'localhost'
-OME_HOST = '192.168.4.240'
+# OME_HOST = 'hsnu-ap'
 # OME_HOST = '0.0.0.0'
+OME_HOST = '192.168.4.240'
 
-OME_API_ENABLE_TLS = 'false'
-OME_API_PORT = '8081'
+OME_API_ENABLE_TLS = 'true'
+OME_API_PORT = '8082'
 OME_API_ACCESS_TOKEN = 'admin:admin'
 
 OME_VHOST_NAME = 'default'
@@ -14,14 +15,14 @@ OME_RTMP_PROVIDER_PORT = '1935'
 
 OME_SRT_PROVIDER_PORT = '9999'
 
-OME_WEBRTC_PROVIDER_ENABLE_TLS = 'false'
-OME_WEBRTC_PROVIDER_PORT = '3333'
+OME_WEBRTC_PROVIDER_ENABLE_TLS = 'true'
+OME_WEBRTC_PROVIDER_PORT = '3334'
 
-OME_WEBRTC_PUBLISHER_ENABLE_TLS = 'false'
-OME_WEBRTC_PUBLISHER_PORT = '3333'
+OME_WEBRTC_PUBLISHER_ENABLE_TLS = 'true'
+OME_WEBRTC_PUBLISHER_PORT = '3334'
 
-OME_LLHLS_PUBLISHER_ENABLE_TLS = 'false'
-OME_LLHLS_PUBLISHER_PORT = '3333'
+OME_LLHLS_PUBLISHER_ENABLE_TLS = 'true'
+OME_LLHLS_PUBLISHER_PORT = '3334'
 
 ## new config ##
 SEAT_PAGES = '2'
