--- a/config_template/nginx.conf
+++ b/config_template/nginx.conf
@@ -1,7 +1,8 @@
 server {
     listen       443 ssl;
     listen  [::]:443 ssl;
-  server_name hsnu-ap;    ssl_certificate /etc/nginx/cert/cert.pem;
+    server_name hsnu-ap;
+    ssl_certificate /etc/nginx/cert/cert.pem;
     ssl_certificate_key /etc/nginx/cert/cert-key.pem;
     
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
@@ -37,4 +38,6 @@ server {
   listen 80;
   listen [::]:80;
   
-  server_name hsnu-ap;  rewrite ^(.*)$ https://192.168.4.240$1 permanent;}
+  server_name hsnu-ap;
+  rewrite ^(.*) https://192.168.4.240$1 permanent;
+}
