add more parsing

--- a/configs/grafana_conf/grafana.ini
+++ b/configs/grafana_conf/grafana.ini
@@ -42,7 +42,8 @@ protocol = https
 
 # The public facing domain name used to access grafana from a browser
 # spaces after name is left for purpose
-domain = hsnu-ap
+domain = hello-world
+
 # Redirect to correct domain if host header does not match domain
 # Prevents DNS rebinding attacks
 ;enforce_domain = false
