edge dashboard style

--- a/config_template/ovenspace.cfg
+++ b/config_template/ovenspace.cfg
@@ -21,5 +21,12 @@ OME_WEBRTC_PUBLISHER_PORT = '3334'
 OME_LLHLS_PUBLISHER_ENABLE_TLS = 'true'
 OME_LLHLS_PUBLISHER_PORT = '3334'
 
-## new config ##
+## grafana panel display config ##
+
+GRAFANA_PORT = "3000";
+DASHBOARD_ID = "b4307069-b390-4c30-adac-e7397c3e672bd"
+DASHBOARD_NAME = "xrcubee"
+THEME = "light"
+TIME_SPAN = '6h'
+
 
