--- a/config_template/ovenspace.cfg
+++ b/config_template/ovenspace.cfg
@@ -24,8 +24,8 @@ OME_LLHLS_PUBLISHER_PORT = '3334'
 ## grafana panel display config ##
 
 GRAFANA_PORT = "3000";
-DASHBOARD_ID = "b4307069-b390-4c30-adac-e7397c3e672bd"
-DASHBOARD_NAME = "xrcubee"
+DASHBOARD_ID = "b4307069-b390-4c30-adac-e7397c3e672bdsk"
+DASHBOARD_NAME = "xr-cube" # lower case, replace _ with -
 THEME = "light"
 TIME_SPAN = '6h'
 
