update prom conf, display panels

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ ssl_pem/
 configs/grafana_conf
 configs/nginx_conf
 configs/OvenSpace_conf
+configs/prometheus_conf
 *.log
 parse.py
 XR_CUBE_T.json
