--- a/config_template/grafana.ini
+++ b/config_template/grafana.ini
@@ -35,13 +35,12 @@
 protocol = https
 
 # The ip address to bind to, empty will bind to all interfaces
-;http_addr = 192.168.4.240
+http_addr = 192.168.4.240
 
 # The http port  to use
 ;http_port = 3000
 
 # The public facing domain name used to access grafana from a browser
-# spaces after name is left for purpose
 domain = hsnu-ap
 
 # Redirect to correct domain if host header does not match domain
@@ -1558,7 +1557,7 @@ tenant_id =
 # Name of the TrueType font file with Italic style
 ;font_italic = DejaVuSansCondensed-Oblique.ttf
 
-[analytics]
+# [analytics]
 # Enable the analytics feature
 ;enabled = true
 
@@ -1711,7 +1710,7 @@ tenant_id =
 # a list of cookies that will be stripped from outgoing datasource requests
 ;cookie_drop_list =
 
-[security.encryption]
+# [security.encryption]
 # Encryption algorithm used to encrypt secrets stored into the database and cookies,
 # possible values are aes-cfb and aes-gcm.
 ;algorithm = aes-cfb
