--- a/config_template/nginx.conf
+++ b/config_template/nginx.conf
@@ -39,5 +39,5 @@ server {
   listen [::]:80;
   
   server_name hsnu-ap;
-  rewrite ^(.*) https://192.168.4.240$1 permanent;
+  rewrite ^(.*) https://192.168.4.240:$1 permanent;
 }
