--- a/config_template/ovenspace.cfg
+++ b/config_template/ovenspace.cfg
@@ -1,3 +1,4 @@
+[OVENSPACE]
 OME_HOST = '192.168.4.240'
 
 OME_API_ENABLE_TLS = 'true'
@@ -22,8 +23,8 @@ OME_LLHLS_PUBLISHER_ENABLE_TLS = 'true'
 OME_LLHLS_PUBLISHER_PORT = '3334'
 
 ## grafana panel display config ##
-
-GRAFANA_PORT = "3000";
+[GRAFANA]
+GRAFANA_PORT = "3000"
 DASHBOARD_ID = "b4307069-b390-4c30-adac-e7397c3e672bdsk"
 DASHBOARD_NAME = "xr-cube" # lower case, replace _ with -
 THEME = "light"
