--- a/config_template/grafana.ini
+++ b/config_template/grafana.ini
@@ -35,7 +35,7 @@
 protocol = https
 
 # The ip address to bind to, empty will bind to all interfaces
-http_addr = 192.168.4.240
+;http_addr = 192.168.4.240
 
 # The http port  to use
 ;http_port = 3000
