--- a/config.cfg
+++ b/config.cfg
@@ -27,4 +27,4 @@ DASHBOARD_ID = b4307069-b390-4c30-adac-e7397c3e672bdsk
 # lower case, replace _ with -
 DASHBOARD_NAME = xr-cube
 THEME = light
-TIME_SPAN = 5s
+TIME_SPAN = 5m
