--- a/config_template/nginx.conf
+++ b/config_template/nginx.conf
@@ -12,7 +12,7 @@ server {
 
     location / {
         proxy_http_version 1.1;
-        proxy_pass http://host.docker.internal:5000;
+        proxy_pass http://172.17.0.1:5000;
     }
 
     location /socket.io {
@@ -20,7 +20,7 @@ server {
         proxy_buffering off;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
-        proxy_pass http://host.docker.internal:5000/socket.io;
+        proxy_pass http://172.17.0.1:5000/socket.io;
     }
 
     error_page  404              /404.html;
