update Readme, fix bug on Linux

--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,9 @@
 # Host information
-[HOST.IP]
+[HOST.INFO]
 dns_hostname = hsnu.ap
 ip_address = 192.168.4.240
+# Host OS type, true / false, case insensitive
+is_Linux = False
 
 # Edge information
 [EDGE.IP]
