update script, readme, parse script updated

--- a/config.cfg
+++ b/config.cfg
@@ -20,7 +20,7 @@ edge_8 = 192.168.3.54
 [EDGE.SCRAPE.PORT]
 windows_exporter = 9182
 NVIDIA_exporter = 9835
-ping_exporter = 8888
+XRCube_exporter = 8888
 
 # Dashboard display setting
 [DASHBOARD.DISPLAY]
